fixed uneven margins

--- a/vcms/lajornadavideos/static/css/video_en_lista.scss
+++ b/vcms/lajornadavideos/static/css/video_en_lista.scss
@@ -10,7 +10,7 @@ article.video {
         color: white;
         display: block;
         position: relative;
-        margin: 0.5rem 0.5rem;
+        margin: 0.5rem 0.25rem 0 0.25rem;
 
         .icon.play {
             position: absolute;
